# WeGo

./: .gitignore  LICENSE  README.md  map.yaml
bashrc/: Readme.md
catkin_ws/src/abot/abot_description/urdf/: robot.urdf.xacro
catkin_ws/src/abot/abot_gazebo/launch/: robot_gazebo.launch  robot_house_gazebo.launch  robot_house_gazebo_limo.launch
catkin_ws/src/abot/abot_navigation/launch/: abot_navigation.launch
catkin_ws/src/abot/abot_navigation/maps/: map.pgm  map.yaml
catkin_ws/src/abot/abot_teleop/scripts/: abot_teleop_key.py
catkin_ws/src/hello_ros/: CMakeLists.txt  package.xml
catkin_ws/src/hello_ros/action/: TimeWait.action
catkin_ws/src/hello_ros/launch/: message.launch  mtmessage.launch
catkin_ws/src/hello_ros/msg/: MyTopic.msg
catkin_ws/src/hello_ros/param/: turtlesim.yaml
catkin_ws/src/hello_ros/scripts/: addClient  addServer  circle_limo  hello.py  limo_voice_mode_one  limo_voice_mode_total  limo_voice_mode_zero  mode_manager  mode_manager_simple  move_Turtle.py  mpub  msub  msub2  mtpub  mtsub  myTopicPub  myTopicSub  patrol_limo  patrol_limo_and_object  patrol_limo_mode  patrol_limo_ori  patrol_limo_voice_test  simpleParameter  simpleParameter2  simpleServiceClient  simpleServiceClient2  simpleServiceServer  timeActionClient  timeActionClient_unsyn  timeActionServer
catkin_ws/src/hello_ros/srv/: AddTwoInts.srv
catkin_ws/src/limo_application/: CMakeLists.txt  package.xml
catkin_ws/src/limo_application/launch/: patrol_line_combo.launch  print.launch  rtabmap_rviz.launch  track_application2.launch  track_application_simul_contest.launch  two_track_application_simul.launch
catkin_ws/src/limo_application/scripts/: Line_detect_contest.py  Two_Line_detect.py  Two_Line_detect_v2.py  camara_test.py  control.py  control_two.py  person_follower.py
catkin_ws/src/limo_gazebo_sim/launch/: limo_four_diff_empty_world.launch  limo_four_diff_empty_world1.launch  limo_four_diff_indoor.launch  limo_four_diff_indoor_no_filtered.launch  limo_four_diff_track.launch  limo_worlds.launch  limo_worlds_yellow_line_track.launch  limo_worlds_yellow_line_track_all.launch
catkin_ws/src/limo_gazebo_sim/worlds/: empty.world  wall_low_map.world  wall_map.world  wall_map2.world  wall_map3.world
catkin_ws/src/limo_gazebo_sim/worlds/map_test3/: model.config  model.sdf
catkin_ws/src/limo_gazebo_sim/worlds/wall_map/: model.config  model.sdf
catkin_ws/src/limo_gazebo_sim/worlds/wall_map2/: model.config  model.sdf
catkin_ws/src/limo_ros/limo_bringup/launch/: limo_navigation_ackerman.launch  limo_navigation_diff.launch  limo_navigation_diff_sim.launch  sim_limo_teletop_keyboard.launch
catkin_ws/src/limo_ros/limo_bringup/map/: map.yaml
catkin_ws/src/limo_ros/limo_bringup/maps/: map.pgm  map.yaml  map0.pgm  map2.pgm  map2.yaml  map3.yaml
catkin_ws/src/limo_ros/limo_bringup/param/diff/: planner.yaml
catkin_ws/src/limo_ros/limo_description/: CMakeLists.txt  package.xml
catkin_ws/src/limo_ros/limo_description/urdf/: limo_four_diff.xacro  limo_four_diff_no_namespace.gazebo  limo_four_diff_no_namespace.xacro  limo_gazebo.gazebo  limo_xacro.xacro
catkin_ws/src/limo_yolo/: CMakeLists.txt  package.xml
catkin_ws/src/limo_yolo/scripts/: yolo_v3n_node.py
catkin_ws/src/my_custom_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/my_custom_msgs/msg/: Vocie_Input.msg
catkin_ws/src/ros_simple_follower/simple_follower/launch/: laser_follower.launch
catkin_ws/src/ros_simple_follower/simple_follower/scripts/: follower.py  laserTracker.py  visualTracker.py
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_autorace_2020.launch
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/course/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/course/materials/scripts/: test_map.material  test_map2.material
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/test_map2/course/: model.config  model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_circle_track.world  turtlebot3_test_map2_track.world  turtlebot3_test_map_track.world
colcon_ws/: .gitignore  map.pgm
colcon_ws/src/: Readme.md
colcon_ws/src/hello_ros2/: package.xml  setup.py
colcon_ws/src/hello_ros2/hello_ros2/: action_server.py  add_server.py  change_color_client.py  dynamic_tf.py  dynamic_tf_turtlesim.py  follow_listener.py  hello_ros.py  move_limo.py  move_turtle.py  move_turtle_param.py  mutil_parameter.py  my_Topic_Pub.py  patrol.py  publish_map.py  simpleServiceClient.py  simpleServiceServer.py  simpleServiceServer2.py  simple_parameter.py  simple_pub.py  simple_sub.py  tf_listener.py
colcon_ws/src/hello_ros2/launch/: message.launch.py  moveTurtle.launch.py
colcon_ws/src/hello_ros2/param/: move_turtle_param.yaml  turtlesim.yaml
colcon_ws/src/ku_description/: package.xml  setup.cfg  setup.py
colcon_ws/src/ku_description/launch/: display.launch.py
colcon_ws/src/ku_description/urdf/: myfirst.urdf  mymodel.xacro  origin.urdf  physics.urdf  visual.urdf
colcon_ws/src/user_interface/: CMakeLists.txt  package.xml
colcon_ws/src/user_interface/action/: Fibonacci.action
colcon_ws/src/user_interface/msg/: MyTopic.msg
colcon_ws/src/user_interface/srv/: AddTwoInts.srv
son_wav_backup/src/audio/: CMakeLists.txt  package.xml  tts.launch
son_wav_backup/src/audio/scripts/: tts_node.py
son_wav_backup/src/stt_node/: CMakeLists.txt  package.xml
son_wav_backup/src/stt_node/launch/: stt.launch
son_wav_backup/src/stt_node/scripts/: stt_listener.py  stt_node.py  stt_node_up.py  voice_ctrl_kr.py
test/: Readme.md
wego_ori/limo_ros/limo_bringup/launch/: limo_navigation_diff.launch
wego_ori/limo_ros/limo_bringup/maps/: gmapping_map.pgm  map.pgm  test_map.pgm
