<?xml version="1.0"?>
<package format="2">
  <name>hello_ros</name>
  <version>0.0.0</version>
  <description>The hello_ros package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>MIT</license>

  <!-- ===== 빌드 툴 ===== -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ===== 빌드 & 실행 의존 ===== -->
  <!-- 메시지·서비스·액션 -->
  <depend>message_generation</depend>     <!-- *.msg, *.srv, *.action 컴파일용 -->
  <depend>message_runtime</depend>        <!-- 런타임 메시지 지원 -->
  <depend>actionlib_msgs</depend>         <!-- TimeWait.action 에 필요 -->
  <depend>dynamic_reconfigure</depend>    <!-- SimpleParameter.cfg 에 필요 -->

  <!-- ROS 기본 라이브러리 -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- (테스트 패키지 예: <test_depend>gtest</test_depend>) -->

  <export/>
</package>
